--- a/front/src/components/Header/Header.module.css
+++ b/front/src/components/Header/Header.module.css
@@ -3,7 +3,7 @@
 }
 .header{
     margin-bottom: 180px;
-    width: 120%;
+    width: 100%
 }
 .logoimage, .navigation{
     flex-direction: row;     
